jira summaries bugfix
